--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
   <title>Document</title>
   <link rel="stylesheet" href="assets/css/header.css">
   <link rel="stylesheet" href="assets/css/hero.css">
+  <link rel="stylesheet" href="assets/css/team-section.css">
+  <link rel="stylesheet" href="assets/css/achievements.css">
+  <link rel="stylesheet" href="assets/css/awards.css">
+  <link rel="stylesheet" href="assets/css/testimonial.css">
+  <link rel="stylesheet" href="assets/css/faq.css">
 </head>
 <body>
   <!-- HEADER -->
@@ -36,7 +41,7 @@
         <h1 class="title">IN THE DIGITAL AGE</h1>
 
         <button class="start-btn">
-          <span class="circle">➜</span>
+          <span class="circle">&#8594;</span>
           START A PROJECT
         </button>
       </div>
@@ -79,5 +84,394 @@
     </div>
 
   </section>
+
+
+
+  <!--TEAM SECTION-->
+  <section class="team-section container_1">
+
+    <!-- TOP BAR -->
+    <div class="team-header">
+      <h2>MEET THE BRILLIANT MINDS BEHIND NEXGEN</h2>
+
+      <button class="all-members-btn">
+        <span class="arrow">
+          <img src="assets/images/arrow-head.svg">
+        </span>
+        ALL MEMBERS
+      </button>
+    </div>
+
+    <!-- TEAM GRID -->
+    <div class="team-grid">
+
+      <div class="team-card">
+        <h3 class="name">JOHN SMITH</h3>
+        <p class="role">Co-Founder & CEO</p>
+        <div class="img-box">
+          <img src="assets/images/img-1.svg" alt="">
+        </div>
+        <div class="socials">
+          <div class="icon">f</div>
+          <div class="icon">t</div>
+          <div class="icon">in</div>
+        </div>
+      </div>
+
+      <div class="team-card">
+        <h3 class="name">SARAH ADAMS</h3>
+        <p class="role">Head of Design</p>
+        <div class="img-box">
+          <img src="assets/images/img-2.svg" alt="">
+        </div>
+        <div class="socials">
+          <div class="icon">f</div>
+          <div class="icon">t</div>
+          <div class="icon">in</div>
+        </div>
+      </div>
+
+      <div class="team-card">
+        <h3 class="name">EMILY JOHNSON</h3>
+        <p class="role">Lead Web Developer</p>
+        <div class="img-box">
+          <img src="assets/images/img-3.svg" alt="">
+        </div>
+        <div class="socials">
+          <div class="icon">f</div>
+          <div class="icon">t</div>
+          <div class="icon">in</div>
+        </div>
+      </div>
+
+      <div class="team-card">
+        <h3 class="name">WILLIAM LEE</h3>
+        <p class="role">Lead Backend Developer</p>
+        <div class="img-box">
+          <img src="assets/images/img-4.svg" alt="">
+        </div>
+        <div class="socials">
+          <div class="icon">f</div>
+          <div class="icon">t</div>
+          <div class="icon">in</div>
+        </div>
+      </div>
+
+    </div>
+
+  </section>
+
+
+
+
+  <section class="achievements">
+  <div class="achievements-title">
+    <h2>OUR ACHIEVEMENTS</h2>
+  </div>
+
+  <div class="achievements-grid">
+
+    <div class="achieve-card">
+      <p class="date">September 2023</p>
+      <h3 class="card-title">GLOBAL RECOGNITION FOR INNOVATION</h3>
+      <p class="desc">
+        In 2023, our digital agency gained global acclaim for innovative solutions,
+        setting new standards in the ever-evolving digital landscape.
+      </p>
+    </div>
+
+    <div class="achieve-card">
+      <p class="date">March 2019</p>
+      <h3 class="card-title">INDUSTRY LEADERSHIP ACKNOWLEDGED</h3>
+      <p class="desc">
+        Recognized as an industry leader in 2019, our agency received prestigious awards,
+        affirming our commitment to excellence and client satisfaction.
+      </p>
+    </div>
+
+    <div class="achieve-card">
+      <p class="date">August 2015</p>
+      <h3 class="card-title">EXPANSION INTO INTERNATIONAL MARKETS</h3>
+      <p class="desc">
+        Expanding horizons in 2015, our agency successfully entered international markets,
+        establishing a global presence and serving clients on a broader scale.
+      </p>
+    </div>
+
+    <div class="achieve-card">
+      <p class="date">January 2010</p>
+      <h3 class="card-title">PIONEERING THE DIGITAL FRONTIER</h3>
+      <p class="desc">
+        In 2010, our agency was born, pioneering the digital frontier and establishing
+        core principles that have guided us through a decade of innovation.
+      </p>
+    </div>
+
+  </div>
+</section>
+
+
+
+
+<section class="awards-section">
+    <h1 class="title">AWARDS & RECOGNITIONS</h1>
+
+    <div class="awards-grid">
+
+        <!-- CARD 1 -->
+        <div class="award-card">
+            <div class="award-top">
+                <span class="date">Date &#8226; <b>October 2017</b></span>
+                <div class="icon">
+                  <img src="assets/images/key.svg">
+                </div>
+            </div>
+            <h2 class="award-name">DIGITAL EXCELLENCE AWARD</h2>
+            <p class="award-desc">
+                Recognition for outstanding contributions to the digital industry, celebrating our ability 
+                to deliver exceptional web design and development solutions that push the boundaries 
+                of creativity and functionality.
+            </p>
+        </div>
+
+        <!-- CARD 2 -->
+        <div class="award-card">
+            <div class="award-top">
+                <span class="date">Date &#8226; <b>March 2019</b></span>
+                <div class="icon">
+                  <img src="assets/images/key.svg">
+                </div>
+            </div>
+            <h2 class="award-name">TOP MOBILE APP DEVELOPMENT AGENCY</h2>
+            <p class="award-desc">
+                Recognized as a top mobile app development agency by industry experts, highlighting our 
+                proficiency in delivering seamless and user-centric mobile applications.
+            </p>
+        </div>
+
+        <!-- CARD 3 -->
+        <div class="award-card">
+            <div class="award-top">
+                <span class="date">Date &#8226; <b>July 2022</b></span>
+                <div class="icon">
+                  <img src="assets/images/key.svg">
+                </div>
+            </div>
+            <h2 class="award-name">BEST DIGITAL MARKETING CAMPAIGN</h2>
+            <p class="award-desc">
+                Awarded for an exceptional digital marketing campaign with outstanding results, showcasing 
+                our data-driven strategies and targeted marketing efforts that achieved remarkable business 
+                growth.
+            </p>
+        </div>
+
+        <!-- CARD 4 -->
+        <div class="award-card">
+            <div class="award-top">
+                <span class="date">Date &#8226; <b>November 2024</b></span>
+                <div class="icon">
+                  <img src="assets/images/key.svg">
+                </div>
+            </div>
+            <h2 class="award-name">INNOVATIVE TECH STARTUP AWARD</h2>
+            <p class="award-desc">
+                Recognition of our pioneering efforts as a technology startup, acknowledging our commitment 
+                to exploring and implementing cutting-edge technologies to drive innovation in the digital 
+                space.
+            </p>
+        </div>
+
+    </div>
+</section>
+
+
+
+<section class="testimonials-section">
+    <div class="testimonials-header">
+        <h2>TESTIMONIALS</h2>
+        <a href="#" class="all-testimonials">
+            <span>&#8599;</span> ALL TESTIMONIALS
+        </a>
+    </div>
+
+    <div class="testimonials-grid">
+
+        <!-- Card 1 -->
+        <div class="testimonial-card">
+            <h3>NEXGEN TURNED OUR BUSINESS AROUND!</h3>
+            <p>
+                Their digital marketing strategies helped us reach new customers and 
+                increase our revenue by 30% within just a few months. Highly recommended!
+            </p>
+
+            <div class="testimonial-footer">
+                <div class="user-info">
+                    <img src="assets/images/avatar-1.svg">
+                    <div>
+                        <h4>Sarah Thompson</h4>
+                        <span>CEO of BlueBloom</span>
+                    </div>
+                </div>
+
+                <div class="arrow-btn">&#8594;</div>
+            </div>
+        </div>
+
+        <!-- Card 2 -->
+        <div class="testimonial-card">
+            <h3>NEXGEN TURNED OUR BUSINESS AROUND!</h3>
+            <p>
+                Their digital marketing strategies helped us reach new customers and 
+                increase our revenue by 30% within just a few months. Highly recommended!
+            </p>
+
+            <div class="testimonial-footer">
+                <div class="user-info">
+                    <img src="assets/images/avatar-2.svg">
+                    <div>
+                        <h4>Wade Warren</h4>
+                        <span>Art Director</span>
+                    </div>
+                </div>
+
+                <div class="arrow-btn">&#8594;</div>
+            </div>
+        </div>
+
+        <!-- Card 3 -->
+        <div class="testimonial-card">
+            <h3>WORKING WITH NEXGEN WAS A PLEASURE.</h3>
+            <p>
+                Their web design team created a stunning website that perfectly captured 
+                our brand's essence. The feedback from our customers has been overwhelmingly positive.
+            </p>
+
+            <div class="testimonial-footer">
+                <div class="user-info">
+                    <img src="assets/images/avatar-3.svg">
+                    <div>
+                        <h4>Lisa Williams</h4>
+                        <span>CEO Of HealthTech</span>
+                    </div>
+                </div>
+
+                <div class="arrow-btn">&#8594;</div>
+            </div>
+        </div>
+
+        <!-- Card 4 -->
+        <div class="testimonial-card">
+            <h3>NEXGEN'S WEB DESIGN TEAM BROUGHT OUR VISION TO LIFE.</h3>
+            <p>
+                Their responsive design ensures our website looks stunning on all devices, 
+                boosting user engagement.
+            </p>
+
+            <div class="testimonial-footer">
+                <div class="user-info">
+                    <img src="assets/images/avatar-4.svg">
+                    <div>
+                        <h4>Jennifer Lee</h4>
+                        <span>COO of Foodie Haven</span>
+                    </div>
+                </div>
+
+                <div class="arrow-btn">&#8594;</div>
+            </div>
+        </div>
+
+    </div>
+</section>
+
+
+
+<section class="faq-section">
+
+    <div class="faq-header">
+        <h2>FREQUENTLY ASKED QUESTIONS</h2>
+
+        <a href="#" class="view-all">
+            <span>&#8599;</span> VIEW ALL
+        </a>
+    </div>
+
+    <div class="faq-container">
+
+        <!-- LEFT OUTER BOX -->
+        <div class="left-box">
+
+            <!-- LEFT FAQ LIST -->
+            <div class="faq-left">
+
+                <div class="faq-item open">
+                    <div class="faq-question">
+                        <h3>How long does it take to complete a web development project?</h3>
+                        <button class="toggle-btn">−</button>
+                    </div>
+                    <p class="faq-answer">
+                        The timeline varies depending on the project's complexity and requirements.
+                        Our team strives to deliver projects on time while maintaining the highest quality standards.
+                    </p>
+                </div>
+
+                <div class="faq-item">
+                    <div class="faq-question">
+                        <h3>Can you handle large-scale mobile app development projects?</h3>
+                        <button class="toggle-btn">+</button>
+                    </div>
+                </div>
+
+                <div class="faq-item">
+                    <div class="faq-question">
+                        <h3>Can you integrate third-party APIs into our mobile app?</h3>
+                        <button class="toggle-btn">+</button>
+                    </div>
+                </div>
+
+                <div class="faq-item">
+                    <div class="faq-question">
+                        <h3>How do you ensure cross-platform compatibility for mobile apps?</h3>
+                        <button class="toggle-btn">+</button>
+                    </div>
+                </div>
+
+                <div class="faq-item">
+                    <div class="faq-question">
+                        <h3>What is your approach to user experience (UX) design?</h3>
+                        <button class="toggle-btn">+</button>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
+        <!-- RIGHT OUTER BOX -->
+        <div class="right-box">
+
+            <!-- RIGHT FORM -->
+            <div class="faq-right">
+                <h3>ASK YOUR QUESTION</h3>
+
+                <form action="#" class="faq-form">
+
+                    <label>NAME</label>
+                    <input type="text" placeholder="Enter your name">
+
+                    <label>EMAIL</label>
+                    <input type="email" placeholder="Enter your email">
+
+                    <label>YOUR QUESTION</label>
+                    <textarea placeholder="Enter Your Question Here ....."></textarea>
+
+                    <button type="submit" class="send-btn">SEND YOUR MESSAGE</button>
+                </form>
+            </div>
+
+        </div>
+
+    </div>
+
+</section>
+
 </body>
 </html>
