--- a/home/index.html
+++ b/home/index.html
@@ -856,6 +856,12 @@
         </span>
       </div>
     </div>
+    <button class="wrap-btn btn-show-more btn-show-more--testimonials hide-on-pc-and-tablet">
+            <span class="btn-arrow-top-right btn-arrow-top-right--works">
+              <img src="./image/arrow-bottom.svg" alt="">
+            </span>
+            <span class="text-side-btn text-side-btn-works">ALL TESTIMONIALS</span>
+          </button>
 
   </div>
  </section>
