--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="assets/css/awards.css">
   <link rel="stylesheet" href="assets/css/testimonial.css">
   <link rel="stylesheet" href="assets/css/faq.css">
+  <link rel="stylesheet" href="assets/css/top-banner.css">
 </head>
 <body>
   <!-- HEADER -->
@@ -472,6 +473,142 @@
     </div>
 
 </section>
+
+
+
+
+<!-- TOP BANNER -->
+    <section class="top-banner">
+        <div class="banner-content">
+            <h1>READY TO TRANSFORM YOUR DIGITAL PRESENCE?</h1>
+            <p>
+                Take the first step towards digital success with NexGen by your side. 
+                Our team of experts is eager to craft tailored solutions that drive growth 
+                for your business.
+            </p>
+        </div>
+
+        <button class="banner-btn">
+            GET IN TOUCH &#8594;
+            
+            
+        </button>
+    </section>
+
+    <!-- SCROLL TEXT -->
+    <section class="scroll-text">
+        <p>ON SOCIAL MEDIA &#183; FOLLOW US ON SOCIAL MEDIA &#183; FOLLOW US ON SOCIAL MEDIA &#183; FOLLOW US ON SOCIAL MEDIA &#183; FOLLOW US ON SOCIAL MEDIA &#183;</p>
+    </section>
+
+
+    <!-- GRID SECTION -->
+    <section class="grid-container">
+
+        <!-- CARD 1 -->
+        <div class="card social-card">
+            <div class="icon-wrap">
+              <img src="assets/images/icon-1.svg">
+            </div>
+            <div class="arrow">
+              <img src="assets/images/arrow-head.svg">
+            </div>
+            <h3>INSTAGRAM</h3>
+            <p>Share visually appealing snippets of our latest web projects.</p>
+        </div>
+
+        <!-- CARD 2 -->
+        <div class="card social-card">
+            <div class="icon-wrap">
+              <img src="assets/images/icon-2.svg">
+            </div>
+            <div class="arrow">
+              <img src="assets/images/arrow-head.svg">
+            </div>
+            <h3>TWITTER</h3>
+            <p>Tweet about interesting coding challenges you've overcome.</p>
+        </div>
+
+        <!-- NAVIGATION CARD -->
+        <div class="card nav-card">
+            <div class="col">
+                <h4>Home</h4>
+                <p>Why Us</p>
+                <p>About Us</p>
+                <p>Testimonials</p>
+                <p>FAQ's</p>
+            </div>
+
+            <div class="col">
+                <h4>Services</h4>
+                <p>Web Development</p>
+                <p>App Development</p>
+                <p>Web Design</p>
+                <p>Digital Marketing</p>
+            </div>
+
+            <div class="col">
+                <h4>Projects</h4>
+                <p>Klothink</p>
+                <p>Zenith</p>
+                <p>Novus</p>
+                <p>Apex</p>
+            </div>
+
+            <div class="col">
+                <h4>Blogs</h4>
+                <p>Business</p>
+                <p>Design <span class="soon">Soon</span></p>
+                <p>Development <span class="soon">Soon</span></p>
+            </div>
+        </div>
+
+        <!-- CARD 3 -->
+        <div class="card social-card">
+            <div class="icon-wrap">
+              <img src="assets/images/icon-3.svg">
+            </div>
+            <div class="arrow">
+              <img src="assets/images/arrow-head.svg">
+            </div>
+            <h3>DRIBBBLE</h3>
+            <p>Showcase design elements of our web projects.</p>
+        </div>
+
+        <!-- CARD 4 -->
+        <div class="card social-card">
+            <div class="icon-wrap">
+              <img src="assets/images/icon-4.svg">
+            </div>
+            <div class="arrow">
+              <img src="assets/images/arrow-head.svg">
+            </div>
+            <h3>BEHANCE</h3>
+            <p>Create detailed presentations for our projects.</p>
+        </div>
+
+        <!-- NEWSLETTER -->
+        <div class="card newsletter-card">
+            <h4>NEWSLETTER</h4>
+            <h2>SUBSCRIBE TO OUR NEWSLETTER</h2>
+
+            <div class="newsletter-input">
+                <input type="email" placeholder="Enter your email">
+                <button>
+                  <img src="assets/images/arrow-head.svg">
+                </button>
+            </div>
+        </div>
+
+        <!-- FOOTER CARD -->
+        <div class="card footer-card">
+            <p>2024 NextGen. All rights reserved.</p>
+            <div>
+                <a href="#">Terms & Conditions</a>
+                <a href="#">Privacy Policy</a>
+            </div>
+        </div>
+
+    </section>
 
 </body>
 </html>
