--- a/Service/index.html
+++ b/Service/index.html
@@ -40,9 +40,9 @@
             <span class="CTA-button-1">
                 <img src="./image/Circle.svg"/>
             </span>
-            <span class="CTA-button-2">
+            <div class="CTA-button-2">
                 <img src="./image/Vector.svg"/>
-            </span>
+            </div>
         </div>
         <span class="CTA-text">Start a project</span>
     </div>
@@ -50,6 +50,10 @@
             With a team of skilled professionals, cutting-edge technologies, and a passion for innovation</p>
     </div>
     <div class="banner-right">
+        <div class="banner-image">
+            <div class="overlay"></div>
+            <img src="./image/Banner.png" alt="Banner">
+        </div>
         <div>
             <span><img src="./image/Vector 431.svg"/></span>
             <span>View Blog</span>
