--- a/Service/index.html
+++ b/Service/index.html
@@ -51,8 +51,8 @@
     </div>
     <div class="banner-right">
         <div class="banner-image">
-            <div class="overlay"></div>
-            <img src="./image/Banner.png" alt="Banner">
+<!--            <div class="overlay"></div>-->
+<!--            <img src="./image/Banner.png" alt="Banner">-->
         </div>
         <div>
             <span><img src="./image/Vector 431.svg"/></span>
