--- a/Service/index.html
+++ b/Service/index.html
@@ -34,33 +34,37 @@
 </header>
 <div class="banner container">
     <div class="banner-left">
-    <h1 class="banner-title">Our Comprehensive Digital Solutions</h1>
-    <div class="CTA">
-        <div class="CTA-button">
-            <span class="CTA-button-1">
-                <img src="./image/Circle.svg"/>
-            </span>
-            <div class="CTA-button-2">
-                <img src="./image/Vector.svg"/>
+        <div class="banner-left-header">
+            <p class="banner-title">Our Comprehensive</p>
+            <div class="CTA">
+                <div class="CTA-button">
+                    <div class="CTA-button-1">
+                        <img src="./image/Circle.svg"/>
+                        <div class="CTA-button-2">
+                            <img src="./image/Vector.svg"/>
+                        </div>
+                    </div>
+                </div>
+                <span class="CTA-text">Start a project</span>
             </div>
         </div>
-        <span class="CTA-text">Start a project</span>
-    </div>
-        <p>At NexGen, we offer a comprehensive suite of digital solutions designed to propel your business to new heights in the digital realm.
-            With a team of skilled professionals, cutting-edge technologies, and a passion for innovation</p>
+
+    <p class="banner-title">Digital Solutions</p>
+    <p class="banner-description">At NexGen, we offer a comprehensive suite of digital solutions designed to propel your business to new heights in the digital realm.
+        With a team of skilled professionals, cutting-edge technologies, and a passion for innovation</p>
     </div>
     <div class="banner-right">
         <div class="banner-image">
-<!--            <div class="overlay"></div>-->
-<!--            <img src="./image/Banner.png" alt="Banner">-->
+            <div class="banner-vector">
+                <div class="vector431"><img src="./image/Vector 431.svg"/></div>
+                <span class="banner-right-text">View Blog</span>
+            </div>
+            <div class="banner-right-btn">
+                Web development.
+            </div>
         </div>
-        <div>
-            <span><img src="./image/Vector 431.svg"/></span>
-            <span>View Blog</span>
-        </div>
-        <div>
-            Web development.
-        </div>
+
+
     </div>
 </div>
 </body>
