feat: our services (40%)

--- a/Service/index.html
+++ b/Service/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href=./css/common.css>
     <link rel="stylesheet" href=./css/header.css>
     <link rel="stylesheet" href=./css/banner.css>
+    <link rel="stylesheet" href=./css/services.css>
 </head>
 <body>
 <header class="header container">
@@ -32,40 +33,149 @@
         </ul>
     </div>
 </header>
-<div class="banner container">
-    <div class="banner-left">
-        <div class="banner-left-header">
-            <p class="banner-title">Our Comprehensive</p>
-            <div class="CTA">
-                <div class="CTA-button">
-                    <div class="CTA-button-1">
-                        <img src="./image/Circle.svg"/>
-                        <div class="CTA-button-2">
-                            <img src="./image/Vector.svg"/>
+<div>
+    <div class="container">
+        <div class="banner-top">
+            <div class="banner-left">
+                <div class="banner-left-header">
+                    <p class="banner-title">Our Comprehensive</p>
+                    <div class="CTA">
+                        <div class="CTA-button">
+                            <div class="CTA-button-1">
+                                <img src="./image/Circle.svg"/>
+                                <div class="CTA-button-2">
+                                    <img src="./image/Vector.svg"/>
+                                </div>
+                            </div>
+                        </div>
+                        <span class="CTA-text">Start a project</span>
+                    </div>
+                </div>
+
+                <p class="banner-title">Digital Solutions</p>
+                <p class="banner-description">At NexGen, we offer a comprehensive suite of digital solutions designed to propel your business to new heights in the digital realm.
+                    With a team of skilled professionals, cutting-edge technologies, and a passion for innovation</p>
+            </div>
+            <div class="banner-right">
+                <div class="banner-image">
+                    <div class="banner-vector">
+                        <div class="vector431"><img src="./image/Vector 431.svg"/></div>
+                        <span class="banner-right-text">View Blog</span>
+                    </div>
+                    <div class="banner-right-btn">
+                        Web development.
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="services">
+            <div class="services-header">
+                <h2>Our services</h2>
+            </div>
+            <div class="services-content">
+                <div class="services-item-left">
+                    <div class="services-item">
+                        <div class="services-web-design">
+                            <div class="services-web-design-image">
+                                <img src="./image/RulerCrossPen.svg"/>
+                                <span>Web design</span>
+                            </div>
+                            <div class= "services-web-design-CTA">
+                                <img src="./image/Vector 431.svg"/>
+                                <span>BOOK A CALL</span>
+                            </div>
+                        </div>
+                        <div>
+                            Our Web Design service is all about creating visually stunning and user-friendly websites that leave a lasting.
+                        </div>
+                        <div>
+                            Starts From $1,500
+                        </div>
+                    </div>
+                    <div class="services-item">
+                        <div class="services-web-design">
+                            <div class="services-web-design-image">
+                                <img src="./image/RulerCrossPen.svg"/>
+                                <span>Web design</span>
+                            </div>
+                            <div class= "services-web-design-CTA">
+                                <img src="./image/Vector 431.svg"/>
+                                <span>BOOK A CALL</span>
+                            </div>
+                        </div>
+                        <div>
+                            Our Web Design service is all about creating visually stunning and user-friendly websites that leave a lasting.
+                        </div>
+                        <div>
+                            Starts From $1,500
+                        </div>
+                    </div>
+                    <div class="services-item">
+                    <div class="services-web-design">
+                        <div class="services-web-design-image">
+                            <img src="./image/RulerCrossPen.svg"/>
+                            <span>Web design</span>
+                        </div>
+                        <div class= "services-web-design-CTA">
+                            <img src="./image/Vector 431.svg"/>
+                            <span>BOOK A CALL</span>
+                        </div>
+                    </div>
+                    <div>
+                        Our Web Design service is all about creating visually stunning and user-friendly websites that leave a lasting.
+                    </div>
+                    <div>
+                        Starts From $1,500
+                    </div>
+                </div>
+                    <div class="services-item">
+                        <div class="services-web-design">
+                            <div class="services-web-design-image">
+                                <img src="./image/RulerCrossPen.svg"/>
+                                <span>Web design</span>
+                            </div>
+                            <div class= "services-web-design-CTA">
+                                <img src="./image/Vector 431.svg"/>
+                                <span>BOOK A CALL</span>
+                            </div>
+                        </div>
+                        <div>
+                            Our Web Design service is all about creating visually stunning and user-friendly websites that leave a lasting.
+                        </div>
+                        <div>
+                            Starts From $1,500
                         </div>
                     </div>
                 </div>
-                <span class="CTA-text">Start a project</span>
+                <div class="services-item-right">
+                    <div class="services-item-right-sub">
+                        <div class="services-item-left-sub">
+                            <div class="services-item-left-sub1">Web Design Projects</div>
+                            <div>
+                                <div class="services-item-left-sub1-text">
+                                    <img src="./image/Vector 431.svg"/>
+                                    <span>View all</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div>
+                            <div>
+                                <div></div>
+                            </div>
+                            <div>
+                                <div></div>
+                            </div>
+                        </div>
+                    </div>
+                    </div>
+                <div>Mobile app development projects</div>
+                <div>Web development projects</div>
+                <div>Digital marketing projects/div>
+                </div>
             </div>
         </div>
-
-    <p class="banner-title">Digital Solutions</p>
-    <p class="banner-description">At NexGen, we offer a comprehensive suite of digital solutions designed to propel your business to new heights in the digital realm.
-        With a team of skilled professionals, cutting-edge technologies, and a passion for innovation</p>
     </div>
-    <div class="banner-right">
-        <div class="banner-image">
-            <div class="banner-vector">
-                <div class="vector431"><img src="./image/Vector 431.svg"/></div>
-                <span class="banner-right-text">View Blog</span>
-            </div>
-            <div class="banner-right-btn">
-                Web development.
-            </div>
-        </div>
 
 
-    </div>
-</div>
 </body>
 </html>
