--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="assets/css/testimonial.css">
   <link rel="stylesheet" href="assets/css/faq.css">
   <link rel="stylesheet" href="assets/css/top-banner.css">
+  <link rel="stylesheet" href="assets/css/responsive.css">
 </head>
 <body>
   <!-- HEADER -->
@@ -33,7 +34,7 @@
 
 
   <!-- HERO -->
-  <section class="hero">
+  <section class="hero container-wide">
 
     <!-- LEFT BOX -->
     <div class="box-wrapper">
@@ -89,7 +90,7 @@
 
 
   <!--TEAM SECTION-->
-  <section class="team-section container_1">
+  <section class="team-section container-wide container">
 
     <!-- TOP BAR -->
     <div class="team-header">
@@ -165,7 +166,7 @@
 
 
 
-  <section class="achievements">
+  <section class="achievements container">
   <div class="achievements-title">
     <h2>OUR ACHIEVEMENTS</h2>
   </div>
