feat: our services (45%)

--- a/Service/index.html
+++ b/Service/index.html
@@ -148,29 +148,18 @@
                     </div>
                 </div>
                 <div class="services-item-right">
-                    <div class="services-item-right-sub">
-                        <div class="services-item-left-sub">
-                            <div class="services-item-left-sub1">Web Design Projects</div>
+                    <div class="services-item">
+                            <div class="services1">Web Design Projects</div>
                             <div>
-                                <div class="services-item-left-sub1-text">
+                                <div class="services-item-right-sub1-text">
                                     <img src="./image/Vector 431.svg"/>
                                     <span>View all</span>
                                 </div>
                             </div>
                         </div>
-                        <div>
-                            <div>
-                                <div></div>
-                            </div>
-                            <div>
-                                <div></div>
-                            </div>
-                        </div>
-                    </div>
-                    </div>
-                <div>Mobile app development projects</div>
-                <div>Web development projects</div>
-                <div>Digital marketing projects/div>
+                    <div class="services-item">Mobile app development projects</div>
+                    <div class="services-item">Web development projects</div>
+                    <div class="services-item">Digital marketing projects</div>
                 </div>
             </div>
         </div>
