feat: our services (45%) 1

--- a/Service/index.html
+++ b/Service/index.html
@@ -148,8 +148,8 @@
                     </div>
                 </div>
                 <div class="services-item-right">
-                    <div class="services-item">
-                            <div class="services1">Web Design Projects</div>
+                    <div class="services-item-right-sub">
+                            <div class="services-item-right-sub1">Web Design Projects</div>
                             <div>
                                 <div class="services-item-right-sub1-text">
                                     <img src="./image/Vector 431.svg"/>
@@ -157,9 +157,9 @@
                                 </div>
                             </div>
                         </div>
-                    <div class="services-item">Mobile app development projects</div>
-                    <div class="services-item">Web development projects</div>
-                    <div class="services-item">Digital marketing projects</div>
+                    <div class="services-item-right-sub">Mobile app development projects</div>
+                    <div class="services-item-right-sub">Web development projects</div>
+                    <div class="services-item-right-sub">Digital marketing projects</div>
                 </div>
             </div>
         </div>
