--- a/home/index.html
+++ b/home/index.html
@@ -99,12 +99,12 @@
       DIGITAL SOLUTIONS 
     </p>
     <div class="hero-cta">
-        <span class="cta-bounder">
+        <div class="cta-bounder">
           <img src="./image/bounder.svg" alt="bounder">
-           <span class="cta-icon">
+           <div class="cta-icon">
             <img src="./image/arrow-black.svg" alt="">
-           </span>
-        </span>
+           </div>
+        </div>
         <span class="cta-text">START A PROJECT</span>
       </div>
       </div>
@@ -151,15 +151,15 @@
       DIGITAL SOLUTIONS
       THAT DRIVE SUCCESS
     </p>
-    <span class="hero-cta">
-        <span class="cta-bounder">
+    <div class="hero-cta">
+        <div class="cta-bounder">
           <img src="./image/bounder.svg" alt="bounder">
-           <span class="cta-icon">
+           <div class="cta-icon">
             <img src="./image/arrow-black.svg" alt="">
-           </span>
-        </span>
+           </div>
+        </div>
         <span class="cta-text">START A PROJECT</span>
-      </span>
+      </div>
     <p class="hero-desc">
     At NexGen, we believe in the transformative power of digital solutions.
     Our team of experts is dedicated to helping businesses like yours thrive
@@ -253,8 +253,8 @@
 <!-- hero -->
 
 <!-- reason -->
- <section class="reason container">
-  <div class="section-header">
+ <section class="reason container">->
+  <div class="section-header section-header--reason">
     <h2 class="section-title">REASONS TO CHOOSE NEXGEN FOR YOUR DIGITAL JOURNEY</h2>
   </div>
 
