--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
   <!-- HEADER -->
-  <header class="header">
+  <!-- <header class="header">
     <div class="container_1 header-inner">
       <div class="logo">NexGen</div>
 
@@ -30,7 +30,37 @@
         <a href="#" class="btn">Contact Us</a>
       </nav>
     </div>
-  </header>
+  </header> -->
+
+
+  <header class="header">
+  <div class="container_1 header-inner">
+
+    <div class="logo">NexGen</div>
+
+    <!-- CHECKBOX TOGGLE -->
+    <input type="checkbox" id="menu-toggle">
+
+    <!-- HAMBURGER -->
+    <label for="menu-toggle" class="menu-btn">
+      <span></span>
+      <span></span>
+      <span></span>
+    </label>
+
+    <nav class="nav">
+      <a href="#">Home</a>
+      <a href="#">Services</a>
+      <a href="#">Projects</a>
+      <a href="#">About</a>
+      <a href="#">Careers</a>
+      <a href="#">Blog</a>
+      <a href="#" class="btn">Contact Us</a>
+    </nav>
+
+  </div>
+</header>
+
 
 
   <!-- HERO -->
